feat: Align Step Definitions with Features. - Review feature files for all unique steps. - Implement all steps in `CoffeeSteps.java` with exact Gherkin matches. 2. Implement Business Validation. - Add validation to `Coffee` model. - Enable `@Valid` in `CoffeeController`. 3. Execute and Verify BDD Suite. - Run the BDD tests and ensure they pass. 4. Final Review and Submission. - Ensure clean, maintainable code with Javadoc. - Verify adherence to SaaS-grade BDD best practices.